--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "dependencies": {
     "@tweenjs/tween.js": "^17.4.0",
     "async": "^2.6.2",
-    "three": "^0.107.0"
+    "three": "^0.107.0",
+    "threebsp": "^1.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.4.4",
@@ -27,6 +28,7 @@
     "copy-webpack-plugin": "^5.0.4",
     "css-loader": "^2.1.1",
     "html-webpack-plugin": "^3.2.0",
+    "imports-loader": "^0.8.0",
     "jquery": "^3.4.1",
     "regenerator": "^0.14.1",
     "style-loader": "^0.23.1",
